--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@sveltejs/adapter-static": "^3.0.5",
     "@sveltejs/kit": "^2.7.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@tauri-apps/cli": "^2",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.5.0",
-    "vite": "^5.4.10",
-    "@tauri-apps/cli": "^2"
+    "vite": "^5.4.10"
   }
 }
